Align with 8.5.x. o.a.t.websocket.pojo package